k8s/coturn.yaml

# =========================
# COTURN DEPLOYMENT
# =========================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coturn
  namespace: meet-service
  labels:
    app: coturn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coturn
  template:
    metadata:
      labels:
        app: coturn
    spec:
      volumes:
        - name: config-volume
          emptyDir: {}
        - name: config-template
          configMap:
            name: coturn-config-template

      containers:
        - name: coturn
          image: instrumentisto/coturn:latest
          args:
            - "-c"
            - "/config/turnserver.conf"
          volumeMounts:
            - name: config-volume
              mountPath: /config

---

# =========================
# COTURN SERVICE
# =========================
apiVersion: v1
kind: Service
metadata:
  name: coturn-service
  namespace: meet-service
spec:
  type: NodePort
  externalTrafficPolicy: Local
  selector:
    app: coturn
  ports:
    - name: turn-udp
      protocol: UDP
      port: 3478
      targetPort: 3478
      nodePort: 32478
    - name: turn-tcp
      protocol: TCP
      port: 3478
      targetPort: 3478
      nodePort: 32562
