k8s/board-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: board-service
  namespace: board-service
  labels:
    app: board-service
spec:
  replicas: 1
  progressDeadlineSeconds: 300
  selector:
    matchLabels:
      app: board-service
  template:
    metadata:
      labels:
        app: board-service
    spec:
      containers:
        - name: board-service
          image: gyurihwang/contest-18-image-board:{BUILD_DATE_TIME}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: board-service
  namespace: board-service
spec:
  selector:
    app: board-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: board-ingress
  namespace: board-service

spec:
  ingressClassName: nginx
  rules:
    - host: api.paassible.kro.kr
      http:
        paths:
          - path: /board
            pathType: Prefix
            backend:
              service:
                name: board-service
                port:
                  number: 8080
